--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,7 +35,7 @@
     <string name="Retos">Challenges:</string>
     <string name="RetosPersonales">Personal</string>
     <string name="RetosGrupales">Group</string>
-    <string name="RetosCachondos">Spicy</string>
+    <string name="RetosCachondos">Spicy  (Coming soon)</string>
     <string name="sexo">Sex:</string>
     <string name="hombre">Man</string>
     <string name="Mujer">Woman</string>
