--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,7 +35,7 @@
     <string name="Retos">Retos:</string>
     <string name="RetosPersonales">Personales</string>
     <string name="RetosGrupales">Grupales</string>
-    <string name="RetosCachondos">Cachondos</string>
+    <string name="RetosCachondos">Cachondos  (Muy pronto)</string>
     <string name="sexo">Sexo:</string>
     <string name="hombre">Hombre</string>
     <string name="Mujer">Mujer</string>
