--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="jugadores">Players</string>
     <string name="jugar">Start</string>
     <string name="opciones">Options</string>
-    <string name="RetosCachondos">Spicy</string>
+    <string name="RetosCachondos">Spicy  (Coming soon)</string>
     <string name="RetosPersonales">Personal</string>
     <string name="RetosGrupales">Group</string>
     <string name="Retos">Challenges:</string>
