--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -47,4 +47,5 @@
     <string name="happy">Happy</string>
     <string name="jumo">JUMO</string>
     <string name="bebe">Beber</string>
+    <string name="action_settings">Ajustes</string>
 </resources>
