--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,4 +47,5 @@
     <string name="happy">Happy</string>
     <string name="jumo">JUMO</string>
     <string name="bebe">Drink</string>
+    <string name="action_settings">Settings</string>
 </resources>
